docs: apply Codex Phase-3 review findings to spec
HIGH resolved:
- Fix Java version: 25 -> 21 (workshop uses Java 21 toolchain confirmed)
- Fix Spring Boot version: 4.0.x -> 4.0.6 (exact pinned version)
- T8 SessionLossFailoverTest: specify isolated ZooKeeperServer instance
  (singleton container must never be stopped — would break all other tests)

MEDIUM applied:
- ConnectionStateListener registered BEFORE client.start() (Codex §5.2)
- T7 WARN assertion: 'exactly one' -> 'at least one' (version-agnostic)
- T4/T5 CountDownLatch pattern: bounded await in finally block,
  clarify releaseLatch.countDown() coordination to prevent deadlock

Codex MEDIUM/C3 (cross-session semantics) downgraded to workshop-scope note:
  library's own tests use same shared-curator pattern